[tool.poetry]
name = "tahutils"
version = "0.1.0"
description = "Python utilities for Tahu & Sparkplug B."
authors = ["Justin Dula <justin.dula@intellicintegration.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
