[tool.poetry]
name = "tahutils"
version = "0.1.0"
description = "Python utilities for Tahu & Sparkplug B."
authors = ["Justin Dula <justin.dula@intellicintegration.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^4.25.3"


[tool.poetry.group.dev.dependencies]
paho-mqtt = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
